welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:2: error: not found: value /
  var sum /Int =0
          ^averageValue:3: error: not found: value n
  n = len(nums)
  ^averageValue:4: error: not found: value n
  for (i<- 0 to n-1){ sum = sum + nums(i)}
                ^