welcome.lessons.welcome.array.search.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
  var sum /Int =0
  n = len(nums)
  for (i<- 0 to n-1){ sum = sum + nums(i)}
  return Math.round(sum/n)
}